<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <View
        android:id="@+id/idHeaderView"
        android:layout_width="415dp"
        android:layout_height="104dp"
        android:background="#1565C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/idHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/run_fatty_run"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFAB91"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/idHeaderView"
        app:layout_constraintEnd_toEndOf="@+id/idHeaderView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/idHeaderView"
        app:layout_constraintTop_toTopOf="@+id/idHeaderView"
        app:layout_constraintVertical_bias="0.39"
        tools:ignore="Autofill,Deprecated,LabelFor,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/idHeaderTextSmall"
        android:layout_width="159dp"
        android:layout_height="15dp"
        android:autoText="false"
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/the_fat_shaming_workout_timer"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#EEEEEE"
        android:textSize="9sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/idHeaderView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idHeaderText"
        tools:ignore="Autofill,Deprecated,LabelFor,SmallSp,TextContrastCheck,TouchTargetSizeCheck,TextSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idBodyLayout"
        android:layout_width="419dp"
        android:layout_height="745dp"
        android:layout_marginEnd="1dp"
        android:background="#0288D1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idHeaderView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintBounds">

        <EditText
            android:id="@+id/idRestPeriodDurationEditText"
            android:layout_width="162dp"
            android:layout_height="53dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="132dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/rest_period_duration"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#EEEEEE"
            android:textColorHint="#EEEEEE"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/idStartStopTimerBtn"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="Autofill,TextContrastCheck" />

        <Button
            android:id="@+id/idStartStopTimerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="92dp"
            android:backgroundTint="#1565C0"
            android:text="@string/start_stop"
            android:textColor="#FFAB91"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/idWorkoutDurationEditText"
            android:layout_width="162dp"
            android:layout_height="53dp"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="132dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/workout_duration"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#EEEEEE"
            android:textColorHint="#EEEEEE"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/idStartStopTimerBtn"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/idSetSelector"
            android:layout_width="162dp"
            android:layout_height="53dp"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="129dp"
            android:layout_marginBottom="232dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/number_of_sets"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#EEEEEE"
            android:textColorHint="#EEEEEE"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/idStartStopTimerBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,TextContrastCheck" />

        <ProgressBar
            android:id="@+id/idWorkoutProgressBar"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
            android:layout_width="182dp"
            android:layout_height="82dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="121dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/workout_progress"
            android:max="100"
            android:progress="@android:integer/config_longAnimTime"
            android:progressTint="@android:color/holo_green_light"
            android:secondaryProgress="50"
            android:secondaryProgressTint="@android:color/holo_orange_light"
            android:soundEffectsEnabled="false"
            android:theme="@style/MaterialAlertDialog.Material3.Title.Text"
            app:layout_constraintBottom_toTopOf="@+id/idSetSelector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/idStartWorkoutTimerBtn"
            android:layout_width="137dp"
            android:layout_height="45dp"
            android:layout_marginStart="141dp"
            android:layout_marginEnd="141dp"
            android:layout_marginBottom="52dp"
            android:backgroundTint="#1565C0"
            android:hint="@string/start"
            android:textSize="10sp"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/idStartStopTimerBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp,SpeakableTextPresentCheck"
            tools:text="START" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="169dp"
            android:layout_height="175dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="125dp"
            android:contentDescription="@string/fat_man_eating_burgers_and_fries"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fat_man_eating_removebg_preview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/idFooterView"
        android:layout_width="412dp"
        android:layout_height="59dp"
        android:background="#1565C0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/idFooterText"
        android:layout_width="155dp"
        android:layout_height="39dp"
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/github_com_returnmarcco"
        android:textAlignment="center"
        android:textColor="#FFAB91"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/idBodyLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/idFooterView"
        tools:ignore="Autofill,LabelFor,SmallSp,TextContrastCheck,TouchTargetSizeCheck,VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>